# pg_opentelemetry

.github/workflows/: benchmark.yml  ci.yml  codeql-analysis.yml  dependencies_image.yml
cmake/: opentelemetry-proto.cmake
examples/: CMakeLists.txt
examples/cwrapper/: CMakeLists.txt  Makefile  cmake_install.cmake  cwrapper.cc  cwrapper.h  storedspan.cc  storedspan.h
exporters/otlp/test/: otlp_log_recordable_test.cc
